--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -83,7 +83,7 @@ Planificacion sobre la ejecucion de un recobro
 | Nombre_proyecto    | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Nombre del proyecto                                                       |
 | id_proyecto        | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el proyecto                                       |
 | Costos             | Decimal(5,2)   | x99999.99   | no nulo                    | Sol        | N/A             | Costos asociados sobre la ejecucion del proyecto                          |
-| Estado_proyecto    | VARCHAR(15)    | x(15)       | Ejecutado, Supervision     | N/A        | N/A             | Estado en el que se encuentra el proyecto                                 |
+| Estado_proyecto    | VARCHAR(15)    | x(15)       | Ejecutado, Finalizado      | N/A        | N/A             | Estado en el que se encuentra el proyecto                                 |
 
   ## Entidad Acuerdo de recobro
 Acuerdo que es consecuencia de la negociacion entre el inquilino y la empresa para definir como proceder para realizar el recobro
@@ -98,13 +98,16 @@ Acuerdo que es consecuencia de la negociacion entre el inquilino y la empresa pa
   ## Entidad Actividades
 Actividad realizada durante la ejecucion del proyecto
 
-| **Atributo**        | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                                    |
-| ------------------- | -------------- | ----------- | -------------------------- | ---------- | --------------- | -----------------------------------------------------------|
-| cod_actividad       | CHAR(10)       | x(10)       | no nulo, único             | N/A        | N/A             | Codigo para identificar a la actividad                     |
-| descripcion         | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Descripcion de la actividad                                |
-| Fecha_inicio        | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha en la que inicia la actividad                        |
-| Fecha_fin           | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha en la que finaliza la actividad                      |
-
+| **Atributo**           | **Naturaleza** | **Formato** | **Valores Válidos**              | **Unidad** | **Derivada de** | **Descripción (Corta)**                        |
+| ---------------------- | -------------- | ----------- | -------------------------------- | ---------- | --------------- | ---------------------------------------------- |
+| cod_actividad          | CHAR(10)       | x(10)       | no nulo, único                   | N/A        | N/A             | Codigo para identificar a la actividad         |
+| nombre_actividad       | CHAR(50)       | x(50)       | no nulo, único                   | N/A        | N/A             | Nombre de la actividad                         |
+| descripcion            | VARCHAR(30)    | x(30)       | No nulo                          | N/A        | N/A             | Descripcion de la actividad                    |
+| Fecha_inicio_actividad | DATE           | YYYY-MM-DD  | Fecha válida, no nulo            | N/A        | N/A             | Fecha en la que inicia la actividad            |
+| Fecha_fin_actividad    | DATE           | YYYY-MM-DD  | Fecha válida, no nulo            | N/A        | N/A             | Fecha en la que finaliza la actividad          |
+| Costo_actividad        | Decimanl(5,2)  | x99999.99   | no nulo, único                   | N/A        | N/A             | Codigo para identificar a la actividad         |
+| Estado_actividad       | VARCHAR(10)    | x(15)       | Ejecutado, Finalizado, En espera | N/A        | N/A             | Codigo para identificar a la actividad         |
+| ID_proyecto_R          | CHAR(10)       | x(10)       | no nulo                          | N/A        | N/A             | Codigo del proyecto relacionado                |
 
   ## Entidad Programación Mantenimientos
 Representa la programación de mantenimientos, tanto preventivo como correctivo.
