--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -101,7 +101,7 @@ Actividad realizada durante la ejecucion del proyecto
 | **Atributo**           | **Naturaleza** | **Formato** | **Valores Válidos**              | **Unidad** | **Derivada de** | **Descripción (Corta)**                        |
 | ---------------------- | -------------- | ----------- | -------------------------------- | ---------- | --------------- | ---------------------------------------------- |
 | cod_actividad          | CHAR(10)       | x(10)       | no nulo, único                   | N/A        | N/A             | Codigo para identificar a la actividad         |
-| nombre_actividad       | CHAR(50)       | x(50)       | no nulo, único                   | N/A        | N/A             | Nombre de la actividad                         |
+| nombre_actividad       | CHAR(50)       | x(50)       | no nulo                          | N/A        | N/A             | Nombre de la actividad                         |
 | descripcion            | VARCHAR(30)    | x(30)       | No nulo                          | N/A        | N/A             | Descripcion de la actividad                    |
 | Fecha_inicio_actividad | DATE           | YYYY-MM-DD  | Fecha válida, no nulo            | N/A        | N/A             | Fecha en la que inicia la actividad            |
 | Fecha_fin_actividad    | DATE           | YYYY-MM-DD  | Fecha válida, no nulo            | N/A        | N/A             | Fecha en la que finaliza la actividad          |
