--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -64,7 +64,7 @@ Contiene información clave sobre el acuerdo de arrendamiento, con atributos par
 | porcentaje       | DECIMAL (2,2)  | 99.99       | No nulo                    | N/A        | N/A             | Porcentaje de las ventas que serviran para calular el monto final de la renta.  |
 
 ## Entidad Recobro
-Contiene información sobre la Solicitud especifica de un servicio extra que la empresa realice para el inquilino
+Contiene información sobre especifica de un servicio extra que la empresa realice para el inquilino
 
 | **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                       |
 | ------------------ | -------------- | ----------- | -------------------------- | ---------- | --------------- | --------------------------------------------- |
