--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -617,7 +617,13 @@ WHERE nro_factura = <nro_factura>;
 
 ## Sentencias SQL
 ### Eventos:
+* **Carga de la página de Empleados:** Se llenará la tabla de todos los empleados en MallPlaza
+```sql
 
+SELECT * FROM recobro_tabla
+WHERE  id_recobro= <Código recobro> 
+
+```
 
 | Codigo Requerimiento  |R-019| 
 |-----------------------|-------|
@@ -626,6 +632,19 @@ WHERE nro_factura = <nro_factura>;
 
 ## Sentencias SQL
 ### Eventos:
+* **Boton Enviar:** Cuando se selecciona los datos se registran.
+*(El estado_recobro por defecto es Enviado y se actualiza según el proceso del recobro)
+```sql
+
+INSERT INTO Recobro (nombre_recobro, descripcion_recobro, id_recobro, Razon_recobro, Categoria_recobro, Estado_recobro)
+VALUES
+(<Nuevo cartel>,
+ <Nuevo cartel de presentación>,
+ <R0123,
+ <Cartel Deteriorado>,
+ <Marketing>,
+ <Enviado>);
+```
 
 | Codigo Requerimiento  |R-20| 
 |-----------------------|-------|
@@ -634,6 +653,44 @@ WHERE nro_factura = <nro_factura>;
 
 ## Sentencias SQL
 ### Eventos:
+* **Boton Añadir actividad:** Se añade una actididad para la planificacion del proyecto
+```sql
+INSERT INTO actividades (cod_actividad, nombre_actividad, descripcion, Fecha_inicio_actividad, Fecha_fin_actividad, Costo_actividad, Estado_actividad)
+VALUES
+(<P001>,
+ <Pintado>,
+ <Pintado del cartel>,
+ <09/11/2024>,
+ <10/11/2024>,
+ <80>,
+ <En  espera>;
+
+```
+*(El Estado_actividad por defecto es En espera y se actualiza según se avance en el proyecto)
+
+* **Boton Eliminar actividad:** Se elimina la actividad seleccionada
+```sql
+SELECT * FROM actividades
+DELETE FROM actividades
+WHERE cod_actividad = <cod_actividad>
+
+```
+Donde <cod_actividad> representa el codigo de la actividad seleccionado para la eliminación
+
+* **Boton Finalizar planificacion:** Se crea el proyecto en la tabla Proyecto recobro
+```sql
+INSERT INTO Proyecto_recobro (cod_actividad, nombre_actividad, descripcion, Fecha_inicio_actividad, Fecha_fin_actividad, Costo_actividad, Estado_actividad, ID_proyecto_R)
+VALUES
+(<P001>,
+ <Pintado>,
+ <Pintado del cartel>,
+ <09/11/2024>,
+ <10/11/2024>,
+ <80>,
+ <En  espera>,
+ <ID_proyecto>);
+
+```
 
 | Codigo Requerimiento  |R-021| 
 |-----------------------|-------|
