--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -78,12 +78,14 @@ Contiene información sobre especifica de un servicio extra que la empresa reali
 ## Entidad Proyecto de recobro 
 Planificacion sobre la ejecucion de un recobro
 
-| **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                                                   |
-| ------------------ | -------------- | ----------- | -------------------------- | ---------- | --------------- | ------------------------------------------------------------------------- |
-| Nombre_proyecto    | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Nombre del proyecto                                                       |
-| id_proyecto        | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el proyecto                                       |
-| Costos             | Decimal(5,2)   | x99999.99   | no nulo                    | Sol        | N/A             | Costos asociados sobre la ejecucion del proyecto                          |
-| Estado_proyecto    | VARCHAR(15)    | x(15)       | Ejecutado, Finalizado      | N/A        | N/A             | Estado en el que se encuentra el proyecto                                 |
+| **Atributo**          | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                           |
+| --------------------- | -------------- | ----------- | -------------------------- | ---------- | --------------- | ------------------------------------------------- |
+| Nombre_proyecto       | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Nombre del proyecto                               |
+| id_proyecto           | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el proyecto               |
+| Costos                | Decimal(5,2)   | x99999.99   | no nulo                    | Sol        | N/A             | Costos asociados sobre la ejecucion del proyecto  |
+| Fecha_inicio_proyecto | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha en la que inicia el proyecto                |
+| Fecha_inicio_proyecto | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha en la que finaliza el pryoecto              |
+| Estado_proyecto       | VARCHAR(15)    | x(15)       | Ejecutado, Finalizado      | N/A        | N/A             | Estado en el que se encuentra el proyecto         |
 
   ## Entidad Acuerdo de recobro
 Acuerdo que es consecuencia de la negociacion entre el inquilino y la empresa para definir como proceder para realizar el recobro
