--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -633,7 +633,6 @@ WHERE  id_recobro= <Código recobro>
 ## Sentencias SQL
 ### Eventos:
 * **Boton Enviar:** Cuando se selecciona los datos se registran.
-*(El estado_recobro por defecto es Enviado y se actualiza según el proceso del recobro)
 ```sql
 
 INSERT INTO Recobro (nombre_recobro, descripcion_recobro, id_recobro, Razon_recobro, Categoria_recobro, Estado_recobro)
@@ -645,6 +644,7 @@ VALUES
  <Marketing>,
  <Enviado>);
 ```
+*(El estado_recobro por defecto es Enviado y se actualiza según el proceso del recobro)
 
 | Codigo Requerimiento  |R-20| 
 |-----------------------|-------|
@@ -655,7 +655,7 @@ VALUES
 ### Eventos:
 * **Boton Añadir actividad:** Se añade una actididad para la planificacion del proyecto
 ```sql
-INSERT INTO actividades (cod_actividad, nombre_actividad, descripcion, Fecha_inicio_actividad, Fecha_fin_actividad, Costo_actividad, Estado_actividad)
+INSERT INTO actividades (cod_actividad, nombre_actividad, descripcion, Fecha_inicio_actividad, Fecha_fin_actividad, Costo_actividad, Estado_actividad, id_proyecto)
 VALUES
 (<P001>,
  <Pintado>,
@@ -663,10 +663,12 @@ VALUES
  <09/11/2024>,
  <10/11/2024>,
  <80>,
- <En  espera>;
+ <En  espera>
+ <id_proyecto>);
 
 ```
 *(El Estado_actividad por defecto es En espera y se actualiza según se avance en el proyecto)
+*(El id_proyecto es el id_proyecto del proyecto al cual se esta realizando la planificacion)
 
 * **Boton Eliminar actividad:** Se elimina la actividad seleccionada
 ```sql
@@ -679,18 +681,23 @@ Donde <cod_actividad> representa el codigo de la actividad seleccionado para la 
 
 * **Boton Finalizar planificacion:** Se crea el proyecto en la tabla Proyecto recobro
 ```sql
-INSERT INTO Proyecto_recobro (cod_actividad, nombre_actividad, descripcion, Fecha_inicio_actividad, Fecha_fin_actividad, Costo_actividad, Estado_actividad, ID_proyecto_R)
-VALUES
-(<P001>,
- <Pintado>,
- <Pintado del cartel>,
- <09/11/2024>,
- <10/11/2024>,
- <80>,
- <En  espera>,
- <ID_proyecto>);
 
+INSERT INTO Proyecto_recobro (Nombre_proyecto, id_proyecto, Costos, Fecha_inicio_proyecto, Fecha_inicio_proyecto, Estado_proyecto)
+SELECT 'Nuevo cartel' AS Nombre_proyecto,
+    'P0123'" AS id_proyecto,
+    SUM(costo) AS Costos,
+    MIN(fecha_inicio_actividad) AS fecha_inicio_proyecto,
+    MAX(fecha_fin_actividad) AS fecha_fin_proyecto,
+    'En espera' AS Estado_proyecto
+FROM actividades
+WHERE id_proyecto = [id_proyecto]
+GROUP BY id_proyecto;
 ```
+
+*(El Estado_proyecto por defecto es En espera y se actualiza según se avance en el proyecto)
+*(El Fecha_inicio_proyecto por defecto es la Fecha_inicio_actividad de la primera actividad que se realiza)
+*(El Fecha_inicio_proyecto por defecto es la Fecha_inicio_actividad de la primera actividad que se realiza)
+*(El Costos del proyecto es la suma de los costos de todas las actividades que pertenecen al proyecto)
 
 | Codigo Requerimiento  |R-021| 
 |-----------------------|-------|
