--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -617,11 +617,10 @@ WHERE nro_factura = <nro_factura>;
 
 ## Sentencias SQL
 ### Eventos:
-* **Carga de la página de Empleados:** Se llenará la tabla de todos los empleados en MallPlaza
+* **Carga de la página de Recobros:** Se llenará la tabla de todos los recobros.
 ```sql
 
 SELECT * FROM recobro_tabla
-WHERE  id_recobro= <Código recobro> 
 
 ```
 
@@ -632,7 +631,7 @@ WHERE  id_recobro= <Código recobro>
 
 ## Sentencias SQL
 ### Eventos:
-* **Boton Enviar:** Cuando se selecciona los datos se registran.
+* **Boton Enviar:** Cuando se selecciona se registran los datos.
 ```sql
 
 INSERT INTO Recobro (nombre_recobro, descripcion_recobro, id_recobro, Razon_recobro, Categoria_recobro, Estado_recobro)
@@ -674,7 +673,7 @@ VALUES
 ```sql
 SELECT * FROM actividades
 DELETE FROM actividades
-WHERE cod_actividad = <cod_actividad>
+WHERE cod_actividad = <codigo de actividad a eliminar>
 
 ```
 Donde <cod_actividad> representa el codigo de la actividad seleccionado para la eliminación
@@ -690,7 +689,7 @@ SELECT 'Nuevo cartel' AS Nombre_proyecto,
     MAX(fecha_fin_actividad) AS fecha_fin_proyecto,
     'En espera' AS Estado_proyecto
 FROM actividades
-WHERE id_proyecto = [id_proyecto]
+WHERE id_proyecto = [id del proyecto]
 GROUP BY id_proyecto;
 ```
 
