--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -617,7 +617,7 @@ WHERE nro_factura = <nro_factura>;
 
 ## Sentencias SQL
 ### Eventos:
-* **Carga de la página de Recobros:** Se llenará la tabla de todos los recobros.
+* **Carga de la página de Recobros:**  Se llenará la tabla de todos los recobros.
 ```sql
 
 SELECT * FROM recobro_tabla
@@ -636,12 +636,12 @@ SELECT * FROM recobro_tabla
 
 INSERT INTO Recobro (nombre_recobro, descripcion_recobro, id_recobro, Razon_recobro, Categoria_recobro, Estado_recobro)
 VALUES
-(<Nuevo cartel>,
- <Nuevo cartel de presentación>,
- <R0123,
- <Cartel Deteriorado>,
- <Marketing>,
- <Enviado>);
+    (<Nuevo cartel>,
+    <Nuevo cartel de presentación>,
+    <R0123,
+    <Cartel Deteriorado>,
+    <Marketing>,
+    <Enviado>);
 ```
 *(El estado_recobro por defecto es Enviado y se actualiza según el proceso del recobro)
 
@@ -656,14 +656,14 @@ VALUES
 ```sql
 INSERT INTO actividades (cod_actividad, nombre_actividad, descripcion, Fecha_inicio_actividad, Fecha_fin_actividad, Costo_actividad, Estado_actividad, id_proyecto)
 VALUES
-(<P001>,
- <Pintado>,
- <Pintado del cartel>,
- <09/11/2024>,
- <10/11/2024>,
- <80>,
- <En  espera>
- <id_proyecto>);
+    (<P001>,
+    <Pintado>,
+    <Pintado del cartel>,
+    <2024-11-9>,
+    <2024-11-10>,
+    <80>,
+    <En  espera>
+    <id_proyecto>);
 
 ```
 *(El Estado_actividad por defecto es En espera y se actualiza según se avance en el proyecto)
@@ -706,6 +706,53 @@ GROUP BY id_proyecto;
 
 ## Sentencias SQL
 ### Eventos:
+* **Cargar la pagina del acuerdo especifico:**  Se cargan los datos  del acuerdo seleccionado
+```sql
+
+SELECT
+    ar.fecha_acuerdo,
+    ar.descripcion_acuerdo,
+    ar.precio_acuerdo,
+    pr.id_proyecto,
+    pr.nombre_proyecto,
+    pr.fecha_inicio_proyecto,
+    pr.fecha_fin_proyecto,
+    r.id_recobro,
+    r.nombre_recobro,
+    r.descripcion_recobro,
+    r.razon_recobro,
+    r.categoria_recobro,
+    r.estado_recobro,
+    p.nombre AS nombre_cliente,
+    p.nro_documento,
+    p.tipo_documento,
+    i.razon_social AS razon_social_inquilino,
+    pe.email AS email_cliente,
+    pt.telefono AS telefono_cliente
+FROM
+    Acuerdo_recobro ar
+JOIN
+    Proyecto_recobro pr ON ar.id_proyecto = pr.id_proyecto
+JOIN
+    Recobro r ON pr.id_recobro = r.id_recobro
+JOIN
+    Persona p ON r.id_recobro = p.id_persona 
+JOIN
+    Inquilino i ON p.id_persona = i.id_persona
+JOIN
+    Espacio_Comercial e ON i.id_espacio_comercial = e.id_espacio_comercial
+LEFT JOIN
+    Persona_email pe ON p.id_persona = pe.id_persona  -- Se une con Persona_email para obtener el email
+LEFT JOIN
+    Persona_telefono pt ON p.id_persona = pt.id_persona
+WHERE
+    ar.id_acuerdo = <ID del acuerdo>; 
+
+```
+* **Editar acuerdo**
+
+* **Guardar cambios:**
+
 
 | Codigo Requerimiento  |R-025| 
 |-----------------------|-------|
