--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -749,9 +749,44 @@ WHERE
     ar.id_acuerdo = <ID del acuerdo>; 
 
 ```
-* **Editar acuerdo**
+* **Editar acuerdo** Se modifican los datos especificos de las tablas Acuerdo_recobro, Recobro y Proyecto_recobro simultaneamente
+  
+```sql
+BEGIN TRANSACTION;
 
-* **Guardar cambios:**
+BEGIN TRY
+
+    -- Actualización de Recobro
+    UPDATE Recobro
+    SET
+        nombre_recobro = <nuevo_nombre_recobro>,
+        categoria_recobro = <nueva_categoria_recobro>,
+        descripcion_recobro = <nueva_descripcion_recobro>
+    WHERE id_recobro = <id_recobro>;
+
+    -- Actualización de Acuerdo_recobro
+    UPDATE Acuerdo_recobro
+    SET
+        descripcion_acuerdo = <nueva_descripcion_acuerdo>,
+        estado_acuerdo = <nuevo_estado_acuerdo>
+    WHERE id_acuerdo = <id_acuerdo>
+    AND id_recobro = <id_recobro>;
+
+    -- Actualización de Proyecto_recobro
+    UPDATE Proyecto_recobro
+    SET
+        nombre_proyecto = <nuevo_nombre_proyecto>,
+        costos = <nuevos_costos>,
+        fecha_inicio_proyecto = <nueva_fecha_inicio_proyecto>,
+        fecha_fin_proyecto = <nueva_fecha_fin_proyecto>,
+        estado_proyecto = <nuevo_estado_proyecto>
+    WHERE id_proyecto = <id_proyecto>
+    AND id_recobro = <id_recobro>;
+
+    COMMIT;
+
+
+```
 
 
 | Codigo Requerimiento  |R-025| 
