--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -742,7 +742,7 @@ JOIN
 JOIN
     Espacio_Comercial e ON i.id_espacio_comercial = e.id_espacio_comercial
 LEFT JOIN
-    Persona_email pe ON p.id_persona = pe.id_persona  -- Se une con Persona_email para obtener el email
+    Persona_email pe ON p.id_persona = pe.id_persona 
 LEFT JOIN
     Persona_telefono pt ON p.id_persona = pt.id_persona
 WHERE
