--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -620,7 +620,7 @@ WHERE nro_factura = <nro_factura>;
 * **Carga de la página de Recobros:**  Se llenará la tabla de todos los recobros.
 ```sql
 
-SELECT * FROM recobro_tabla
+SELECT * FROM Recobros
 
 ```
 
@@ -667,6 +667,7 @@ VALUES
 
 ```
 *(El Estado_actividad por defecto es En espera y se actualiza según se avance en el proyecto)
+
 *(El id_proyecto es el id_proyecto del proyecto al cual se esta realizando la planificacion)
 
 * **Boton Eliminar actividad:** Se elimina la actividad seleccionada
