--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -698,7 +698,7 @@ GROUP BY id_proyecto;
 
 *(El Fecha_inicio_proyecto por defecto es la Fecha_inicio_actividad de la primera actividad que se realiza)
 
-*(El Fecha_inicio_proyecto por defecto es la Fecha_inicio_actividad de la primera actividad que se realiza)
+*(El Fecha_fin_proyecto por defecto es la Fecha_fin_actividad de la primera actividad que se realiza)
 
 *(El Costos del proyecto es la suma de los costos de todas las actividades que pertenecen al proyecto)
 
