--- a/0/0.3_Daryl/0.3.md
+++ b/0/0.3_Daryl/0.3.md
@@ -17,3 +17,5 @@ Correo personal: darylgonzales@outlook.com
   Link del video individual PC1: [https://youtu.be/_imLK59c02Y](https://youtu.be/WGuEK1Yn4E8)
   
   Link del video individual PC2: https://youtu.be/J23-sidQ3Z0
+
+  Link del video individual PC2: https://youtu.be/97z5tbCiXgk
