--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -953,3 +953,20 @@ WHERE (
 ) 
 AND e.id_espacio_comun LIKE '%<cadena>%';
 ```
+
+
+| Codigo Requerimiento  |R-30| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-047| 
+| Imagen interfaz       |![image](I047.png)|
+| Imagen interfaz       |![image](I047-1.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Filtro de datos de Zona común:** Se obtendrá el costo de alquilar la zona común. Luego el costo se calculará: precio_por_día * (numero de dias del evento)
+```sql
+SELECT e.precio_por_dia
+FROM Espacio_comun e
+WHERE e.id_espacio_comun = '%<id_espacio_comun>%'
+
+```
