--- a/0/0.3_Daryl/0.3.md
+++ b/0/0.3_Daryl/0.3.md
@@ -6,7 +6,7 @@ Código: 20200160F
 
 Nombre y Apellidos: Daryl Renzo Gonzales Camarena
 
-Correo UNI: daryl.gonzales.c@uni.pr
+Correo UNI: daryl.gonzales.c@uni.pe
 
 Correo personal: darylgonzales@outlook.com
 
