--- a/10/10.md
+++ b/10/10.md
@@ -1,3 +1,7 @@
+<h3>Navegación:<br>
+
+[🔙](../9/9.md) 9. Objetos de Base de Datos | [📜](../README.md) ÍNDICE | [👉🏼](../11/11.md) 11. Desarrollo de Aplicación
+
 # 10. Diseño de Proceso Batch
 
 Sample content for section 10.
