--- a/11/11.md
+++ b/11/11.md
@@ -1,3 +1,7 @@
+<h3>Navegación:<br>
+
+[🔙](../10/10.md) 10. Diseño de Proceso Batch | [📜](../README.md) ÍNDICE
+
 # 11. Desarrollo de Aplicación
 
 Sample content for section 11.
