--- a/8/8.md
+++ b/8/8.md
@@ -1,6 +1,6 @@
 <h3>Navegación:<br>
 
-[🔙](../7/7.md) 7. Creación de Tablas y Poblamiento de Datos | [📜](../README.md) ÍNDICE
+[🔙](../7/7.md) 7. Creación de Tablas y Poblamiento de Datos | [📜](../README.md) ÍNDICE | [👉🏼](../9/9.md) 9. Objetos de Base de Datos
 
 # 8. Preparación para Implementación
 
