--- a/9/9.md
+++ b/9/9.md
@@ -1,3 +1,7 @@
+<h3>Navegación:<br>
+
+[🔙](../8/8.md) 8. Preparación para Implementación | [📜](../README.md) ÍNDICE | [👉🏼](../10/10.md) 10. Diseño de Proceso Batch
+
 # 9. Objetos de Base de Datos
 
 Sample content for section 9.
