inquilino final update

--- a/10/10.1/10.1.md
+++ b/10/10.1/10.1.md
@@ -1,3 +1,14 @@
 # 10.1. Listado de Procesos Batch
 
-Sample content for section 10.1.
+## Módulo 4: Inquilino
+**Actualización de Estados de Inquilinos**<br>
+Cambiar el estado de los inquilinos en función de fechas o eventos, como contratos vencidos o pagos pendientes.
+- Revisar los contratos asociados (si se almacenan en otra tabla) para detectar vencimientos.
+- Actualizar la columna estado_inquilino a los valores de ACTIVO o INACTIVO.
+
+**Reporte de Ocupación de Espacios**<br>
+Generar un reporte diario/semanal de los espacios comerciales ocupados y disponibles.
+- Consultar los estados de los espacios comerciales (estado en Espacio_Comercial) y determinar cuántos están DISPONIBLES y OCUPADOS.
+
+**Generación de Reportes para Administración**<br>
+Crear reportes periódicos con información consolidada de inquilinos, zonas y espacios comerciales.
