--- a/10/10.2/10.2.md
+++ b/10/10.2/10.2.md
@@ -1,3 +1,7 @@
 # 10.2. Objetivos
 
-Sample content for section 10.2.
+## Módulo 4: Inquilino
+El objetivo principal de los procesos Batch es automatizar tareas que, de otro modo, requerirían intervención manual frecuente. Como por ejemplo:
+- Actualización automática de estados de inquilinos (por ejemplo, pasar de "ACTIVO" a "INACTIVO" al vencerse un contrato o por falta de pagos).
+- Generación periódica de reportes operativos para la administración (ocupación de espacios, ingresos generados, etc.).
+- Tasa de ocupación por zona o tipo de espacio comercial.
