--- a/10/10.3/10.3.md
+++ b/10/10.3/10.3.md
@@ -1,3 +1,68 @@
 # 10.3. Tablas Involucradas (Entradas, Temporales, Salidas)
 
-Sample content for section 10.3.
+## Módulo 4: Inquilino
+
+### Proceso Batch 1: Actualización de Estados de Inquilinos
+**Tabla de entrada** -> Inquilino: Para obtener información del inquilino, como estado_inquilino, fecha_eliminacion.
+Acá se genera una tabla temporal con los inquilinos que necesitan ser actualizados (estados):
+
+**Tabla temporal**
+```sql
+CREATE TEMP TABLE tmp_inquilinos_actualizar AS
+SELECT id_inquilino, 'INACTIVO' AS nuevo_estado
+FROM Inquilino
+WHERE fecha_eliminacion IS NOT NULL AND fecha_eliminacion <= CURRENT_DATE;
+```
+**Tabla de Salida:** -> Inquilino: Se actualiza directamente la columna estado_inquilino con los nuevos valores.
+
+### Proceso Batch 2: Reporte de Ocupación de Espacios
+**Tabla de entrada:** -> Espacio_Comercial: Para obtener la información de los espacios, como estado, tipo_inmueble, id_zona y otros datos relevantes.
+
+**Tabla temporal** -> Para almacenar los resultados intermedios del reporte
+```sql
+CREATE TEMP TABLE temp_reporte_ocupacion (
+    id_zona CHAR(5),
+    estado VARCHAR(10),
+    total_espacios INT
+);
+```
+**Tabla de Salida**
+```sql
+CREATE TABLE Reporte_Ocupacion (
+    fecha DATE,
+    id_zona CHAR(5),
+    estado VARCHAR(10),
+    total_espacios INT
+);
+
+```
+
+### Proceso Batch 3: Generación de Reportes para Administración
+**Tabla de entradas:**
+- Inquilino: Para obtener información básica como razon_social, estado_inquilino, id_espacio_comercial.
+- Espacio_Comercial: Para incluir detalles de los espacios asociados (por ejemplo, tarifa, tipo_inmueble, id_zona).
+
+**Tabla temporal**
+```sql
+CREATE TEMP TABLE temp_reporte_administracion (
+    id_inquilino CHAR(10),
+    razon_social VARCHAR(50),
+    estado_inquilino estado_inquilino,
+    id_espacio_comercial CHAR(10),
+    nombre_zona VARCHAR(25),
+    tarifa NUMERIC(6, 2)
+);
+```
+
+**Tabla de Salida**
+```sql
+CREATE TABLE Reporte_Administracion (
+    fecha DATE,
+    id_inquilino CHAR(10),
+    razon_social VARCHAR(50),
+    estado_inquilino estado_inquilino,
+    id_zona CHAR(5),
+    nombre_zona VARCHAR(25),
+    tarifa_total NUMERIC(12, 2)
+);
+```
