--- a/10/10.4/10.4.md
+++ b/10/10.4/10.4.md
@@ -1,3 +1,25 @@
 # 10.4. Flujo de Operaciones
 
-Sample content for section 10.4.
+## Módulo 4: Inquilinos
+### Proceso Batch 1: Actualización de Estados de Inquilinos
+1. El sistema revisa los registros en la tabla Inquilino.
+2. Se identifican las condiciones para actualizar los estados, como:
+3. Si fecha_eliminacion no es NULL y está en el pasado, cambiar estado_inquilino a INACTIVO.
+4. Si hay alguna relación con una tabla de pagos y el inquilino está en mora, cambiar estado_inquilino a EN MORA.
+5. Se almacena temporalmente la lista de inquilinos con su nuevo estado en una tabla temporal (temp_inquilino_estado).
+6. Se realiza la actualización en la tabla Inquilino con los valores calculados.
+Opcional: Los inquilinos que han sido marcados como "INACTIVO" se mueven a una tabla histórica (Inquilino_Historico).
+
+### Proceso Batch 2: Reporte de Ocupación de Espacios
+1. Se consultan los registros en la tabla Espacio_Comercial para obtener el estado (OCUPADO, DISPONIBLE, etc.), el tipo de inmueble y el identificador de la zona (id_zona).
+2. Se realiza una unión con la tabla Zona para obtener información adicional sobre las zonas (como su nombre o referencia).
+3. Se agrupan los resultados por id_zona, estado y, si es necesario, por tipo_inmueble.
+4. Los resultados se almacenan temporalmente en una tabla (temp_reporte_ocupacion) para consolidar los datos.
+5. El reporte final se almacena en una tabla permanente de reportes (Reporte_Ocupacion) o se exporta directamente para visualización en herramientas de BI.
+
+### Proceso Batch 3: Generación de Reportes para Administración
+1. Se consultan los registros en la tabla Inquilino para obtener información básica de los inquilinos, como razon_social, estado_inquilino y su espacio comercial asociado (id_espacio_comercial).
+2. Se realiza una unión con la tabla Espacio_Comercial para obtener información sobre los espacios (por ejemplo, tarifa, tipo_inmueble).
+3. Se realiza una segunda unión con la tabla Zona para incluir detalles sobre las zonas (como nombre_zona).
+4. Los datos consolidados se almacenan en una tabla temporal (temp_reporte_administracion).
+Opcional: Los datos finales se transfieren a una tabla de reportes permanentes (Reporte_Administracion) para su análisis a futuro.
