--- a/10/10.5/10.5.md
+++ b/10/10.5/10.5.md
@@ -1,3 +1,27 @@
 # 10.5. Resultado final (salida)
 
-Sample content for section 10.5.
+## Módulo 4: Inquilino
+### Proceso Batch 1: Actualización de Estados de Inquilinos
+Tabla de Salida: Inquilino (actualizada con los nuevos estados)
+| id_inquilino | razon_social     | estado_inquilino | fecha_eliminacion | fecha_registro | id_persona | id_espacio_comercial |
+|--------------|------------------|------------------|-------------------|----------------|------------|----------------------|
+| C001         | Nike             | INACTIVO         | 2023-11-15        | 2020-03-12     | P001       | E001                |
+| C002         | Adidas           | ACTIVO           | NULL              | 2021-06-22     | P002       | E002                |
+| C003         | McDonalds        | INACTIVO         | NULL              | 2022-01-10     | P003       | E003                |
+
+### Proceso Batch 2: Reporte de Ocupación de Espacios
+abla de Salida: Reporte_Ocupacion
+| fecha       | id_zona | nombre_zona   | estado     | total_espacios |
+|-------------|---------|---------------|------------|----------------|
+| 2024-11-30  | Z001    | Zona Norte    | OCUPADO    | 25             |
+| 2024-11-30  | Z002    | Zona Sur      | DISPONIBLE | 15             |
+| 2024-11-30  | Z003    | Zona Este     | MANTENIMIENTO | 5             |
+
+
+### Proceso Batch 3: Generación de Reportes para Administración
+Tabla de Salida: Reporte_Administracion
+| fecha       | id_inquilino | razon_social | estado_inquilino | id_zona | nombre_zona   | tarifa_total |
+|-------------|--------------|--------------|------------------|---------|---------------|--------------|
+| 2024-11-30  | C001         | Nike         | INACTIVO         | Z001    | Zona Norte    | 1500.00      |
+| 2024-11-30  | C002         | Adidas       | ACTIVO           | Z002    | Zona Sur      | 2000.00      |
+| 2024-11-30  | C003         | McDonalds    | INACTIVO         | Z003    | Zona Este     | 1200.00      |
