--- a/11/11.1/11.1.md
+++ b/11/11.1/11.1.md
@@ -1,3 +1,29 @@
 # 11.1. Alcance de la implementación
 
-Sample content for section 11.1.
+## Módulo 4: Inquilinos
+1. Objetivo del módulo
+El módulo de Inquilinos tiene como propósito central gestionar de manera eficiente la información de los inquilinos, sus relaciones con los espacios comerciales y las zonas, y permitir una integración fluida con otros módulos del sistema de Mallplaza.
+
+2. Funcionalidades cubiertas
+**Gestión de datos principales:**
+- Registro, actualización y eliminación de inquilinos, incluyendo:
+  - Razón social, estado del inquilino y fechas clave (registro y eliminación).
+  - Relación con personas asociadas y espacios comerciales ocupados.
+- Asociación entre inquilinos y sus espacios comerciales asignados.
+
+**Procesos automatizados (Batch):**
+
+- Actualización de estados de inquilinos:
+  - Identificación de inquilinos activos, inactivos o en mora.
+  - Mantenimiento de la integridad de los datos con cambios automáticos basados en fechas o eventos.
+- Reporte de ocupación de espacios:
+  - Generación de reportes periódicos sobre el estado de los espacios comerciales por zona.
+- Reportes administrativos:
+  - Consolidación de información relevante de inquilinos, espacios y zonas para la toma de decisiones estratégicas.
+
+**Integración con otros módulos:**
+
+Vinculación de inquilinos con:
+- Personas: Validación de información personal y documentos asociados.
+- Espacios comerciales: Administración de los inmuebles ocupados por cada inquilino.
+- Zonas: Clasificación de los espacios ocupados según ubicación.
