--- a/11/11.2/11.2.md
+++ b/11/11.2/11.2.md
@@ -1,3 +1,7 @@
 # 11.2. Código fuente (Repositorios)
 
-Sample content for section 11.2.
+## Módulo 4: Inquilinos
+El código fuente principal del módulo de inquilinos lo podrás encontras en la carpeta de mallplaza_app, la cual contiene otra carpeta con el mismo nombre donde se podra observar todos los módulos realizados.
+
+- Código Fuente principal del módulo Inquilino
+[(Ir aquí)](../../mallplaza_app/mallplaza_app/inquilino/)
