--- a/9/9.1/9.1.md
+++ b/9/9.1/9.1.md
@@ -1,3 +1,17 @@
 # 9.1. Índices
 
-Sample content for section 9.1.
+## MÓDULO 4: INQUILINOS
+```sql
+--Tabla Inquilino
+CREATE INDEX idx_inquilino_id_persona ON inquilino (id_persona);
+CREATE INDEX idx_inquilino_id_espacio_comercial ON inquilino (id_espacio_comercial);
+
+--Tabla Persona
+CREATE INDEX idx_persona_id_persona ON persona (id_persona);
+
+--Tabla Espacio_comercial
+CREATE INDEX idx_espacio_comercial_id_zona ON espacio_comercial (id_zona);
+
+--Tabla Zona
+CREATE INDEX idx_zona_id_zona ON zona (id_zona);
+```
