--- a/9/9.2/9.2.md
+++ b/9/9.2/9.2.md
@@ -1,3 +1,72 @@
 # 9.2. Vistas
 
-Sample content for section 9.2.
+## MÓDULO 4: INQUILINOS
+
+Esta vista permite al usuario - administrador a visualizar los principales datos del inquilino
+```sql
+CREATE VIEW AS vista_inquilino
+SELECT i.id_inquilino,
+		p.nombre as "Nombre",
+		i.razon_social as "Razón Social",
+		p.nro_documento as "RUC",
+		c.nombre_zona as "Espacio Comercial",
+		t.telefono as "Teléfono",
+		e.email as "Email",
+		i.estado_inquilino as "Estado Inquilino"
+FROM inquilino i
+JOIN persona p
+	ON i.id_persona = p.id_persona
+JOIN persona_email e
+	ON p.id_persona = e.id_persona
+JOIN persona_telefono t
+	ON p.id_persona = t.id_persona
+JOIN espacio_comercial c
+	ON i.id_espacio_comercial = c.id_espacio_comercial;
+```
+
+Esta vista nos ayuda a rastrear aquellos inquilinos que ya no poseen un local en Mallplza y tinen facturas pendientes
+```sql
+CREATE VIEW as exinquilinos_pagos_pendientes
+SELECT 
+    i.id_inquilino,
+    p.nombre AS "Nombre",
+    i.razon_social AS "Razón Social",
+    p.nro_documento AS "RUC",
+    c.nombre_zona AS "Espacio Comercial",
+    t.telefono AS "Teléfono",
+    e.email AS "Email",
+    i.estado_inquilino AS "Estado Inquilino",
+    COUNT(*) AS "Pagos pendientes"
+FROM inquilino i
+JOIN persona p
+    ON i.id_persona = p.id_persona
+JOIN persona_email e
+    ON p.id_persona = e.id_persona
+JOIN persona_telefono t
+    ON p.id_persona = t.id_persona
+JOIN espacio_comercial c
+    ON i.id_espacio_comercial = c.id_espacio_comercial
+JOIN factura f
+    ON f.id_inquilino = i.id_inquilino
+WHERE i.estado_inquilino = 'Inactivo'
+GROUP BY 
+    i.id_inquilino,
+    p.nombre,
+    i.razon_social,
+    p.nro_documento,
+    c.nombre_zona,
+    t.telefono,
+    e.email,
+    i.estado_inquilino
+HAVING COUNT(*) > 0;
+```
+
+La siguiente vista muestra el número inquilinos que tiene un local en la zona interesada
+```sql
+CREATE VIEW as vista_inquilinos_zona
+SELECT z.nombre_zona, COUNT(*) AS total_inquilinos
+FROM Inquilino i
+JOIN Espacio_Comercial ec ON i.id_espacio_comercial = ec.id_espacio_comercial
+JOIN Zona z ON ec.id_zona = z.id_zona
+GROUP BY z.nombre_zona;
+```
