--- a/9/9.3/9.3.md
+++ b/9/9.3/9.3.md
@@ -1,3 +1,45 @@
 # 9.3. Secuencias
 
-Sample content for section 9.3.
+## Módulo 4: Inquilinos
+
+### Tabla Inquilinos
+
+Primero se crea una secuencia que genere números consecutivos
+```sql
+CREATE SEQUENCE seq_id_inquilino
+    START WITH 1
+    INCREMENT BY 1
+    MINVALUE 1
+    MAXVALUE 999
+    CACHE 1; 
+```
+Considerando la generación secuencial para la tabla inquilinos
+```sql
+CREATE TABLE Inquilino
+(
+  id_inquilino CHAR(10) NOT NULL PRIMARY KEY,
+  razon_social VARCHAR(50) NOT NULL,
+  fecha_eliminacion DATE,
+  fecha_registro DATE NOT NULL,
+  estado_inquilino estado_inquilino NOT NULL,
+  id_persona CHAR(10) NOT NULL,
+  id_espacio_comercial CHAR(10) NOT NULL,
+  FOREIGN KEY (id_persona) REFERENCES Persona(id_persona),
+  FOREIGN KEY (id_espacio_comercial) REFERENCES Espacio_Comercial(id_espacio_comercial)
+);
+```
+
+Nuevo formato de tabla con SEQUENCE, cuando se haga la insercción de datos en la tabla inquilinos, PostgreSQL generará automáticamente el valor en el formato que se indicó
+```sql
+CREATE TABLE Inquilino (
+  id_inquilino CHAR(10) NOT NULL PRIMARY KEY DEFAULT ('C' || TO_CHAR(NEXTVAL('seq_inquilino'), 'FM000')),
+  razon_social VARCHAR(50) NOT NULL,
+  fecha_eliminacion DATE,
+  fecha_registro DATE NOT NULL,
+  estado_inquilino estado_inquilino NOT NULL,
+  id_persona CHAR(10) NOT NULL,
+  id_espacio_comercial CHAR(10) NOT NULL,
+  FOREIGN KEY (id_persona) REFERENCES Persona(id_persona),
+  FOREIGN KEY (id_espacio_comercial) REFERENCES Espacio_Comercial(id_espacio_comercial)
+);
+```
