--- a/9/9.md
+++ b/9/9.md
@@ -4,4 +4,8 @@
 
 # 9. Objetos de Base de Datos
 
-Sample content for section 9.
+## CONTENIDO
+- 9.1. [Índices](9.1/9.1.md)
+- 9.2. [Vistas](9.2/9.2.md)
+- 9.3. [Secuencias](9.3/9.3.md)
+- 9.4. [Otros objetos de BD](9.4/9.4.md)
