--- a/10/10.md
+++ b/10/10.md
@@ -4,4 +4,9 @@
 
 # 10. Diseño de Proceso Batch
 
-Sample content for section 10.
+## CONTENIDO
+- 10.1. [Listado de Procesos Batch](10.1/10.1.md)
+- 10.2. [Objetivos](10.2/10.2.md)
+- 10.3. [Tablas Involucradas (Entradas, Temporales, Salidas)](10.3/10.3.md)
+- 10.4. [Flujo de Operaciones](10.4/10.4.md)
+- 10.5. [Resultado final (salida)](10.4/10.4.md)
