--- a/3/3.2/3.2.md
+++ b/3/3.2/3.2.md
@@ -105,5 +105,5 @@ Mediante este módulo la empresa podrá gestionar el mantenimiento preventivo y 
 - Permitir al supervisor registrar los mantenimientos realizados.
 - Permitir registrar incidencias que ocurren en el establecimiento que implica una acción correctiva.
 ### Interacción con otros módulos
-- Módulo de usuario: Los usuarios, como los supervisores de mantenimiento o el administrador de mantenimiento del centro comercial, necesitan acceso al sistema o estar logueados para gestionar las tareas de mantenimiento. 
+- Módulo de logeo y Módulo de empleados: Los usuarios, como los supervisores de mantenimiento o el administrador de mantenimiento del centro comercial, necesitan acceso al sistema o estar logueados para gestionar las tareas de mantenimiento. 
 
